[gd_scene load_steps=11 format=2]

[ext_resource path="res://Common/Staatliches-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ScreenEnd/ScreenEnd.gd" type="Script" id=2]
[ext_resource path="res://ScreenEnd/DatabreakBinary1Red.png" type="Texture" id=3]
[ext_resource path="res://ScreenEnd/DatabreakBinary0Read.png" type="Texture" id=4]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 500, 500, 1 )
flag_disable_z = true
spread = 120.0
gravity = Vector3( 0, -500, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
scale_random = 0.01

[sub_resource type="AnimatedTexture" id=2]
flags = 4
frames = 2
frame_0/texture = ExtResource( 3 )
frame_1/texture = ExtResource( 4 )
frame_1/delay_sec = 0.0

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 500, 500, 1 )
flag_disable_z = true
gravity = Vector3( 0, -500, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.2
scale_random = 0.1

[sub_resource type="AnimatedTexture" id=4]
flags = 4
frames = 2
fps = 8.0
frame_0/texture = ExtResource( 4 )
frame_1/texture = ExtResource( 3 )
frame_1/delay_sec = 0.0

[sub_resource type="DynamicFont" id=5]
size = 58
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 36
font_data = ExtResource( 1 )

[node name="ScreenEnd" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BinaryParticle" type="Particles2D" parent="."]
position = Vector2( 505.22, 323.347 )
amount = 50
randomness = 1.0
process_material = SubResource( 1 )
texture = SubResource( 2 )

[node name="BinaryParticleInverse" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 504.944, 320.081 )
amount = 30
process_material = SubResource( 3 )
texture = SubResource( 4 )

[node name="GameOverLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.5
margin_top = -200.0
margin_right = 206.5
margin_bottom = 105.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.298039, 0, 0, 1 )
text = "You've Been Caught

Data is Leaked
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.5
margin_top = 100.0
margin_right = 76.5
margin_bottom = 174.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.298039, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.298039, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.298039, 0, 0, 1 )
text = "Play Again"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
